      -------------------------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------
19-Nov-2014 V. Uzhinsky    (hadr-string-diff-V10-00-10)
- 2 bugs are fixed. The first one was connected with multiple quark exchanges in hA interactions
  accompanated by string excitations. A status of such hadrons was not set in a right manner.
  The second bug was in the determination of anti-alpha particle 4-momentum at stopping (at low
  energy). All changes were marked "Uzhi 18 Nov. 2014".


15-Nov-2014 V. Uzhinsky    (hadr-string-diff-V10-00-09)
- Bug is fixed. It was connected with missing of treating of involved nucleons
  of a projectile nucleus in FTFmodel (Case5 instead of Case 4).

connected with annihilations of anti-delta isobars is erased. Now
  G4FTFAnnihilation can treat the processes.
  A fine tuning of parameters for Pi+P interactions is done.

14-Nov-2014 V. Uzhinsky    (hadr-string-diff-V10-00-08)
- Bug connected with annihilations of anti-delta isobars is erased. Now
  G4FTFAnnihilation can treat the processes.
  A fine tuning of parameters for Pi+P interactions is done.

 7-Nov-2014 V. Uzhinsky    (hadr-string-diff-V10-00-07)
- Compilation bug is fixed for the tuned FTF model.

 6-Nov-2014 V. Uzhinsky    (hadr-string-diff-V10-00-06)
- Tuned FTF model.

 2-Oct-2014 V. Uzhinsky    (hadr-string-diff-V10-00-05)
-  Bug is fixed in G4DiffractiveSplitableHadron.cc where baryons are subdivided
   into quark and diquark. Suppresion of uu-diquark in proton is also introduced.
   Diquarks with identical quarks are now suppressed on 50 % (probability 1/6) except
   baryon like Delta++ (uuu), Delta- (ddd) and so on.
